<resources>
    <string name="app_name">EasyMarket</string>
    <string name="back">BACK</string>
    <string name="_continue">Continue</string>
    <string name="must_login">You must logged in!</string>
    <string name="empty_text">Result will be appear here.</string>
    <string name="select_minimum_1">Minimum order amount for </string>
    <string name="select_minimum_2"> is </string>
    <string name="enjoy_shopping">Enjoy Shopping</string>
    <string name="subtotal_title">Sub Total</string>
    <string name="checkout">CheckOut</string>
    <string name="specification">Specification</string>
    <string name="none">"--- None ---"</string>
    <string name="please_select_country_first">"--- Please select country first ---"</string>
    <string name="sign_up_please_select">"---Please select---</string>
    <string name="result_not_found">Result not found!</string>
    <string name="try_using_another_keyword">Try using another keyword.</string>
    <string name="please_select_language">Select Language</string>
    <string name="all_products">All products</string>
    <string name="change_shipping_adds_for_shipping_options">There is no Delivery Options Available \n at your selected Location.
                                                        \n Please try with some other address.</string>
    <string name="mail_successfully_send">Mail successfully send</string>
    <string name="e_mail_id_not_exist">Email not exist!</string>
    <string name="pwd_successfully_sent_at_your_email">Password successfully sent at your Email.</string>
    <string name="invalid_user_name_or_pwd">Invalid Username or Password!</string>
    <string name="successfully_added">Successfully Added</string>
    <string name="successfully_removed">Successfully Removed</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="items">item(s)</string>
    <string name="cart_sub_total">Sub Total</string>
    <string name="cart_total">Total</string>
    <string name="failure">Some Field missing</string>
    <string name="add_to_cart_success">Product successfully added.</string>
    <string name="out_of_stock">Out of Stock!</string>
    <string name="discount_coupon">Coupon</string>
    <string name="discount_gift_voucher">Gift Voucher</string>
    <string name="discount_reward_points">Reward Points</string>
    <string name="featured">Featured</string>
    <string name="latest">New Arrivals</string>
    <string name="special">Deal of the day</string>
    <string name="view_all">View all</string>
    <string name="yet_to_build">Yet to build.</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="image">Image</string>
    <string name="search_pre_text">Whats on your mind!</string>
    <string name="new_search_hint">Search for Products, Brands and More</string>
    <string name="please_check_your_internet_connection">Please check the connection !!</string>
    <string name="no_connection">No Internet connection</string>
    <string name="error">Sorry,Something went wrong!!</string>
    <string name="network_slow">Bad network</string>
    <string name="try_again">Check your connection.Try again!</string>
    <string name="categories">CATEGORIES</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">close</string>
    <string name="sort_category">Category</string>
    <string name="sorting">Sorting</string>
    <string name="sort_default">Default</string>
    <string name="sort_name_AZ">Name ( A - Z )</string>
    <string name="sort_name_ZA">Name ( Z - A )</string>
    <string name="sort_price_LH">Price ( Low > High )</string>
    <string name="sort_price_HL">Price ( High > Low )</string>
    <string name="sort_rating_H">Rating ( Highest )</string>
    <string name="sort_rating_L">Rating ( Lowest )</string>
    <string name="sort_model_AZ">Model ( A - Z )</string>
    <string name="sort_model_ZA">Model ( Z - A )</string>
    <string name="price_title">Price</string>
    <string name="special_price_title">Special Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="color">Color</string>
    <string name="quantity">Quantity</string>
    <string name="and"> , </string>
    <string name="please_select">Select</string>
    <string name="quantity_check_1">Minimum order amount for </string>
    <string name="quantity_check_3">Maximum order amount for </string>
    <string name="quantity_check_2"> is </string>
    <string name="manufacture">Manufacture</string>
    <string name="stock_status">Stock</string>
    <string name="there_is_no_review_for_this_product">There are no reviews for this product.</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_register">Register</string>
    <string name="menu_wish_list">Wish List</string>
    <string name="menu_my_order">My order</string>
    <string name="menu_name">User</string>
    <string name="menu_cart">Cart</string>
    <string name="post">Post</string>
    <string name="write_rating">Write review</string>
    <string name="review">Review</string>
    <string name="rating">Rating</string>
    <string name="enter_name">Please enter the name</string>
    <string name="enter_name_length">Please enter the name with 3 to 25 characters!</string>
    <string name="enter_command">Please rate and review</string>
    <string name="enter_command_length">Please enter the review more than 25 to 100 characters!</string>
    <string name="enter_rating">Please enter the rating</string>
    <string name="enter_rating_value">Please enter the rating between 1 to 5</string>
    <string name="success">Review successfully posted</string>
    <string name="reviews">reviews</string>
    <string name="button_cancel">Cancel</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="wish_list_success">Successfully added.</string>
    <string name="wish_list_removed">Successfully removed.</string>
    <string name="wish_list_remove">Remove</string>
    <string name="demo">Demo</string>
    <string name="demo_instruction">(Click demo for without registration)</string>
    <string name="title_login">LOGIN</string>
    <string name="register">Register</string>
    <string name="show_password">Show Password</string>
    <string name="forgotten_password_link">Forgotten Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_ac_login_here">If you have an account, Click here!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="telephone">Telephone</string>
    <string name="fax">Fax</string>
    <string name="company">Company</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="city">  City</string>
    <string name="post_code">Post Code</string>
    <string name="country">Country</string>
    <string name="region_or_state">Region / State</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="subscribe">Subscribe</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="i_have_agree_privacy_policy">I have read and agree to the Privacy Policy</string>
    <string name="submit">Submit</string>
    <string name="login_success">Login Successful</string>
    <string name="please_enter_valid_email">Please enter a valid email id</string>
    <string name="please_enter_your_email_id">Please enter your email id</string>
    <string name="please_enter_your_pwd">Please enter your password</string>
    <string name="no_account_found_for_email">No account found with that email address.Please try again.</string>
    <string name="login_failed">Login failed.Invalid email id / password</string>
    <string name="reg_error">Register failed!</string>
    <string name="reg_error_first_name">First Name must be between 1 and 32 characters!</string>
    <string name="reg_error_last_name">Last Name must be between 1 and 32 characters!</string>
    <string name="reg_error_email1">E-Mail Address does not appear to be valid!</string>
    <string name="reg_error_email2">Enter valid E-Mail Address!</string>
    <string name="reg_error_telephone">Telephone must be between 3 and 32 characters!</string>
    <string name="reg_error_address1">Address 1 must be between 3 and 128 characters!</string>
    <string name="reg_error_city">City must be between 2 and 128 characters!</string>
    <string name="reg_error_postcode">Post Code must be between 2 and 10 characters!</string>
    <string name="reg_error_country">Please select a country!</string>
    <string name="reg_error_region_state">Please select a region/state!</string>
    <string name="reg_error_pwd">Password must be between 5 and 20 characters!</string>
    <string name="reg_error_confirm_pwd">Password Confirmation does not match Password!</string>
    <string name="reg_error_privacy_police">You must agree to the privacy policy!</string>
    <string name="registration_successful">Registration Successful !</string>
    <string name="registration_successful_sign_up">Registration Successful</string>
    <string name="password_star_symbol">************</string>
    <string name="enter_email_id_and_pwd">Enter email id and password</string>
    <string name="your_personal_details">Your Personal Details</string>
    <string name="your_address">Your Address</string>
    <string name="your_password">Your Password</string>
    <string name="news_letter">Newsletter</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="logging_in">Logging in...</string>
    <string name="loading_please_wait">Loading please wait...</string>
    <string name="delivery_shipment_info">Shipment Info</string>
    <string name="delivery_billing_info">Billing Info</string>
    <string name="delivery_phone_number">Phone number</string>
    <string name="delivery_street_address">Street address</string>
    <string name="delivery_state">State</string>
    <string name="delivery_zip_code">Zip Code</string>
    <string name="payment_type">Payment type</string>
    <string name="shipping_type">Delivery type</string>
    <string name="shipping_address">Shipping address</string>
    <string name="change_address">Change address</string>
    <string name="change_order">Change order</string>
    <string name="place_order">Place Order</string>
    <string name="return_to_home">Continue shopping</string>
    <string name="checkout_bar_delivery_and_billing_detail">Delivery detail</string>
    <string name="checkout_bar_delivery_method">Delivery method</string>
    <string name="checkout_bar_payment_method">Payment method</string>
    <string name="checkout_bar_confirmation">Confirm order</string>
    <string name="order_success">Your order has been successfully processed.
You can view your order history by going to the my account page and by clicking on history.
If your purchase has an associated download, you can go to the account downloads page to view them.
Please direct any questions you have to the store owner.
Thanks for shopping with us online!</string>
    <string name="order_success_placed">YOUR ORDER SUCCESSFULLY PLACED!</string>
    <string name="order_success_processed">Your order has been successfully processed!</string>
    <string name="edit_address">Edit Address</string>
    <string name="address">Address</string>
    <string name="menu_account">My Account</string>
    <string name="menu_order">My Orders</string>
    <string name="menu_edit_ac">Edit Account</string>
    <string name="tv_address">Address</string>
    <string name="change_password_page">CHANGE PASSWORD</string>
</resources>