<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView_adds_book_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground_color"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_id_adds_book_editor_new"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/white">

            <LinearLayout
                android:id="@+id/layout_adds_book_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <com.easymco.custom.FontBold
                    android:id="@+id/tv_edit_pro_main_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/shipping_address"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/title" />

                <com.easymco.custom.FontBold
                    android:id="@+id/tv_edit_pro_sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/your_personal_details"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/sub_heading" />

                <View
                    android:id="@+id/SplitLine_hor1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="@color/grey_400" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:drawableEnd="@drawable/ic_action_grade_red_10dp"
                    android:drawableRight="@drawable/ic_action_grade_red_10dp"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/first_name"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/body" />

                <EditText
                    android:id="@+id/et_edit_pro_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_modified_text_state"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_10sdp"
                    android:textColorHint="@color/third_level_text_color"
                    android:textSize="@dimen/body" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_error_edit_pro_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/reg_error_first_name"
                    android:textColor="@color/red"
                    android:textSize="@dimen/caption"
                    android:visibility="gone" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:drawableEnd="@drawable/ic_action_grade_red_10dp"
                    android:drawableRight="@drawable/ic_action_grade_red_10dp"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/last_name"
                    android:textSize="@dimen/body" />

                <EditText
                    android:id="@+id/et_edit_pro_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_modified_text_state"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_10sdp"
                    android:textColorHint="@color/third_level_text_color"
                    android:textSize="@dimen/body" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_error_edit_pro_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/reg_error_last_name"
                    android:textColor="@color/red"
                    android:textSize="@dimen/caption"
                    android:visibility="gone" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/company"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/body"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/et_edit_pro_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_modified_text_state"
                    android:hint="@string/company"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColorHint="@color/third_level_text_color"
                    android:textSize="@dimen/caption"
                    android:visibility="gone" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:drawableEnd="@drawable/ic_action_grade_red_10dp"
                    android:drawableRight="@drawable/ic_action_grade_red_10dp"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/tv_address"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/body" />

                <EditText
                    android:id="@+id/et_edit_pro_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_modified_text_state"
                    android:hint="@string/address_1"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColorHint="@color/third_level_text_color"
                    android:textSize="@dimen/body" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_error_edit_pro_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/reg_error_address1"
                    android:textColor="@color/red"
                    android:textSize="@dimen/caption"
                    android:visibility="gone" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:drawableEnd="@drawable/ic_action_grade_red_10dp"
                    android:drawableRight="@drawable/ic_action_grade_red_10dp"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/city"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/body" />

                <EditText
                    android:id="@+id/et_edit_pro_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_modified_text_state"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColorHint="@color/third_level_text_color"
                    android:textSize="@dimen/body" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_error_edit_pro_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/reg_error_city"
                    android:textColor="@color/red"
                    android:textSize="@dimen/caption"
                    android:visibility="gone" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_postcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/post_code"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/body" />


                <EditText
                    android:id="@+id/et_edit_pro_postcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_modified_text_state"
                    android:hint="@string/post_code"
                    android:inputType="number"
                    android:padding="@dimen/_10sdp"
                    android:textColorHint="@color/third_level_text_color"
                    android:textSize="@dimen/body" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_error_edit_pro_postcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/reg_error_postcode"
                    android:textColor="@color/red"
                    android:textSize="@dimen/caption"
                    android:visibility="gone" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:drawableEnd="@drawable/ic_action_grade_red_10dp"
                    android:drawableRight="@drawable/ic_action_grade_red_10dp"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/country"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/body" />

                <Spinner
                    android:id="@+id/spinner_edit_pro_country"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:background="@drawable/spinner_background"
                    android:padding="@dimen/_8sdp"
                    android:spinnerMode="dialog"
                    android:textSize="@dimen/body" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_error_edit_pro_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/reg_error_country"
                    android:textColor="@color/red"
                    android:textSize="@dimen/caption"
                    android:visibility="gone" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_region_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:drawableEnd="@drawable/ic_action_grade_red_10dp"
                    android:drawableRight="@drawable/ic_action_grade_red_10dp"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/region_or_state"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/body" />

                <Spinner
                    android:id="@+id/spinner_edit_pro_region_or_state"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:background="@drawable/spinner_background"
                    android:padding="@dimen/_8sdp"
                    android:spinnerMode="dialog"
                    android:textSize="@dimen/body" />

                <com.easymco.custom.FontRegular
                    android:id="@+id/tv_error_edit_pro_region_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/reg_error_region_state"
                    android:textColor="@color/red"
                    android:textSize="@dimen/caption"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/layout_edit_pro_actions"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_edit_pro_back"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_2sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_weight="0.5"
                        android:background="@drawable/negative_btn_back_grand"
                        android:text="@string/back"
                        android:textColor="@color/white"
                        android:textSize="@dimen/body" />

                    <Button
                        android:id="@+id/btn_edit_pro_continue"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_weight="0.5"
                        android:background="@drawable/positive_btn_back_ground"
                        android:text="@string/_continue"
                        android:textColor="@color/white"
                        android:textSize="@dimen/body" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>

