<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <com.easymco.custom.FontRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/change_password_page"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/sub_heading" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:textColorHint="@color/grey_600">

            <EditText
                android:id="@+id/account_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/secondary_text_color"
                android:textColorHint="@color/secondary_text_color"
                android:textSize="@dimen/body" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_confirm_password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:textColorHint="@color/grey_600">

            <EditText
                android:id="@+id/account_confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/secondary_text_color"
                android:textColorHint="@color/secondary_text_color"
                android:textSize="@dimen/body" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/account_change_password_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/positive_btn_back_ground"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/body" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/change_pwd_closer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:background="@drawable/round_shape_with_grey_600"
        android:contentDescription="@string/image"
        android:padding="@dimen/_5sdp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_close_white_18dp" />


</FrameLayout>